# TraceLogViewer

./: .gitignore  CHANGES.md  CMakeLists.txt  README.md  configure.sh  makefile
include/trace/client/: FileReader.h  LogOutput.h  UdpClientThread.h
src/: main.cpp
src/trace/client/: FileReader.cpp  LogOutput.cpp  UdpClientThread.cpp
